Circle Select in edit mode seems to be locked to the local view axes of the first selection click/stroke (can't properly select while rotating the camera with a 3D mouse) #65834

Closed
opened 2019-06-15 17:01:38 +02:00 by Carlos Paredes · 3 comments

System Information
Operating system: Windows 10 Home
Graphics card: GeForce GTX 960M

Blender Version
Broken: 2.80 Date: 2019-06-14 23:24 Hash: 0fd96b4128
Worked: 2.80 Date: 2019-04-03 23:27 Hash: 0e78e3038d

Short description of error
I use a Space Navigator 3D mouse, so I tend to move the camera a lot when using tools like Circle Select. I'm used to click "C" only once and keep selecting while rotating the view.

This is how this worked (please click the picture to show the GIF clip)
2.8WorkedCircleSelectf.gif

This is how it works now
2.8BrokenCircleSelect.gif

Now, when using Circle Select "C" the selection tool seems to be locked in the local view axes of the first selection click/stroke, so if the view is rotated, the circle select tool doesn't follow the new local view plane and instead it keeps projecting the selection on the view plane of the first click.

  • This "axis lock" behavior doesn't appear to happen when using a similar tool as Select Circle ("W"), however, "shift" needs to be pressed every time for adding vertices/faces to the selection.

Exact steps for others to reproduce the error

  • Enter edit mode (tab).
  • Press "C" only once to activate the circle select tool.
  • Start selecting.
  • Rotate the view while selecting vertices/faces.
**System Information** Operating system: Windows 10 Home Graphics card: GeForce GTX 960M **Blender Version** Broken: 2.80 Date: 2019-06-14 23:24 Hash: 0fd96b4128ff Worked: 2.80 Date: 2019-04-03 23:27 Hash: 0e78e3038d02 **Short description of error** I use a Space Navigator 3D mouse, so I tend to move the camera a lot when using tools like Circle Select. I'm used to click "C" only once and keep selecting while rotating the view. This is how this worked (please click the picture to show the GIF clip) ![2.8WorkedCircleSelectf.gif](https://archive.blender.org/developer/F7104446/2.8WorkedCircleSelectf.gif) This is how it works now ![2.8BrokenCircleSelect.gif](https://archive.blender.org/developer/F7104410/2.8BrokenCircleSelect.gif) Now, when using Circle Select "C" the selection tool seems to be locked in the local view axes of the first selection click/stroke, so if the view is rotated, the circle select tool doesn't follow the new local view plane and instead it keeps projecting the selection on the view plane of the first click. * This "axis lock" behavior doesn't appear to happen when using a similar tool as Select Circle ("W"), however, "shift" needs to be pressed every time for adding vertices/faces to the selection. **Exact steps for others to reproduce the error** - Enter edit mode (tab). - Press "C" only once to activate the circle select tool. - Start selecting. - Rotate the view while selecting vertices/faces.
Author

Added subscriber: @JuanCarlosParedesCervantes

Added subscriber: @JuanCarlosParedesCervantes
Germano Cavalcante was assigned by Sebastian Parborg 2019-06-20 14:56:48 +02:00

This issue was referenced by 3039d86f8b

This issue was referenced by 3039d86f8bc00796cde3b93185db23698652002a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65834
No description provided.