Fix T65834: Circle Select does not update select_id buffer after orbiting view3d.

This solution checks if `persp_mat` has changed. If positive, the selection buffer is redrawn.

Differential Revision: https://developer.blender.org/D5081